--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "@babel/eslint-parser": "^7.16.3",
+    "@hookform/resolvers": "^2.8.3",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-devtools": "^3.6.0",
     "@types/react-dom": "^17.0.0",
+    "@types/remote-redux-devtools": "^0.5.5",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-jest-enzyme": "^7.1.2",
     "eslint-plugin-babel": "^5.3.1",
@@ -18,15 +22,25 @@
     "eslint-plugin-jest": "^25.2.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.0",
     "husky": "^7.0.4",
     "jest-enzyme": "^7.1.2",
+    "laravel-echo": "^1.11.3",
+    "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
+    "pusher-js": "^7.0.3",
     "react": "^17.0.2",
+    "react-devtools": "^4.21.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.0",
+    "remote-redux-devtools": "^0.5.0",
+    "remotedev": "^0.2.9",
+    "remotedev-server": "^0.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
@@ -40,7 +54,8 @@
     "lint": "eslint --debug src/",
     "lint:write": "eslint --debug src/ --fix",
     "pre-commit": "lint-staged",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "remotedev": "remotedev --hostname=localhost --port=8000"
   },
   "husky": {
     "hooks": {
@@ -75,9 +90,10 @@
     "@commitlint/cli": "^14.1.0",
     "@commitlint/config-conventional": "^13.2.0",
     "@types/react-router-dom": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.27.0",
     "lint-staged": "^11.2.3"
   }
 }
